# Programming-Methods.-Laboratory-work-3

./: CMakeLists.txt  Doxyfile  README.md  generate_psp_plots.py  generator.h  main.cpp  tests.h
docs/: PSP.md  api_reference.html
output/: histogram.csv  nist_results.csv  psp_report.html  speed_results.csv  stats_summary.csv
